[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "cryptoix"
version = "0.1.0"
description = "Official Python SDK for the Cryptoix.io Merchant API"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{ name = "Cryptoix", email = "support@cryptoix.io" }]
keywords = ["cryptoix", "crypto", "payments", "merchant", "api"]
dependencies = ["httpx>=0.27"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12"
]

[project.urls]
Homepage = "https://cryptoix.io"
Documentation = "https://cryptoix.io/docs/api"

[tool.hatch.build.targets.wheel]
packages = ["src/cryptoix"]
